Archive2/37/bb8d17d2eb5c76/output
main.cpp:1:1: error: 'include' does not name a type
 include <iostream>
 ^
main.cpp: In function 'int main()':
main.cpp:12:5: error: 'cout' was not declared in this scope
     cout<<"Please enter your height(inches): "<<endl;
     ^
main.cpp:12:49: error: 'endl' was not declared in this scope
     cout<<"Please enter your height(inches): "<<endl;
                                                 ^
main.cpp:13:5: error: 'cin' was not declared in this scope
     cin>>height;
     ^
main.cpp:22:19: error: 'system' was not declared in this scope
     system("pause");
                   ^
